--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body class="preload">
   <div id="page">
   <div class="menu-btn hidden-md hidden-lg">
       <a href="#menu"><span></span></a>
@@ -1024,9 +1024,9 @@
   <script type="text/javascript" src="mmenu/js/jquery.mmenu.all.min.js"></script>
   <script src="bootstrap/js/bootstrap-datepicker.min.js"></script>
   <script src="js/jquery.validate.js"></script>
-  <script src="js/material.js"></script>    
+  <script src="js/material.js"></script>
   <script src="js/script.js"></script>
-  
+
 </body>
 
 </html>
