home page updates

--- a/home.html
+++ b/home.html
@@ -125,7 +125,7 @@
                   </div>
                   <div class="col-md-1">
                     <div class="shop-by-shape">
-                      <img src="images/princess.png" alt="Shop Princess">
+                      <img src="images/princes.png" alt="Shop Princess">
                     </div>
                     <span class="diamond-shape">PRINCESS</span>
                   </div>
@@ -240,7 +240,7 @@
                                   <span><a class="title">Diamonds</a>
                                       <ul class="diamonds-thumbnails">
                                           <li><a href="#"><img src="images/round.png" alt="Shop Round"><span>Round</span></a></li>
-                                          <li><a href="#"><img src="images/princess.png" alt="Shop Princess"><span>Princess</span></a></li>
+                                          <li><a href="#"><img src="images/princes.png" alt="Shop Princess"><span>Princess</span></a></li>
                                           <li><a href="#"><img src="images/cushion.png" alt="Shop Cushion"><span>Heart</span></a></li>
                                           <li><a href="#"><img src="images/asscher.png" alt="Shop Asscher"><span>Asscher</span></a></li>
                                           <li><a href="#"><img src="images/marquise.png" alt="Shop Marquise"><span>Marquise</span></a></li>
@@ -457,7 +457,7 @@
         </div>
         <div class="col-md-1">
           <div class="shop-by-shape">
-            <img src="images/princess.png" alt="Shop Princess">
+            <img src="images/princes.png" alt="Shop Princess">
           </div>
           <span class="diamond-shape">PRINCESS</span>
         </div>
