--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sunny Diamonds</title>
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <!-- Important Owl stylesheet -->
