footer style updates

--- a/home.html
+++ b/home.html
@@ -903,7 +903,6 @@
           <p class="sign-up">Sign up now for our newsletter and get $5 off your next order</p>
           <input type="text" class="fname" name="firstname" placeholder="Enter your email address">
           <input type="submit" class="submit" value="Subscribe">
-          <br>
           <!-- radio button -->
           <div class="radio-section">
             <ul class="radio-button">
@@ -930,7 +929,6 @@
           <span>ContactUs@caralane.com</span>
         </div>
       </div>
-      <hr>
       <div class="detail-list">
         <div class="col-md-2 col-sm-4">
           <span class="hidden-xs">About Us</span>
@@ -966,7 +964,7 @@
             <li>Return/Exchange Policy</li>
             <li>Reward Program</li>
             <li>Privacy Policy</li>
-            <li>Terms & Condition</li>
+            <li>Terms &amp; Condition</li>
           </ul>
         </div>
         <div class="col-md-2 col-sm-4">
@@ -979,7 +977,7 @@
             <li>Return/Exchange Policy</li>
             <li>Reward Program</li>
             <li>Privacy Policy</li>
-            <li>Terms & Condition</li>
+            <li>Terms &amp; Condition</li>
           </ul>
         </div>
         <div class="col-md-2 col-sm-4">
