--- a/account.html
+++ b/account.html
@@ -311,8 +311,8 @@
     <section class="registration-section ">
         <div class="create-account container">
             <div class="account-wrapper">
-                <h3>CREATE AN ACCOUNT</h3>
-                <p class="create-caption">Hello, I'm new here.</p>
+                <h3 class="text-center">CREATE AN ACCOUNT</h3>
+                <p class="create-caption text-center">Hello, I'm new here.</p>
                 <form id="register-form">
                     <div class="form-group label-floating">
                         <label for="firstName" class="control-label"><span class="text-name">First Name</span><span class="star">*</span></label>
@@ -355,13 +355,13 @@
                         <label>
                             <input type="checkbox"> <span class="checkbox-text">Sign Up for Newsletter</span></label>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block btn-color"><span class="btn-continue">continue</span></button>
+                    <button type="submit" class="btn btn-primary btn-block btn-default">continue</button>
                 </form>
             </div>
         </div>
         <div class="login-section container">
             <div class="login-wrapper">
-                <h3>LOGIN</h3>
+                <h3 class="text-center">LOGIN</h3>
                 <p class="login-caption text-center">If you have an account with us, please log in.</p>
                 <form id="login-form">
                     <div class="form-group label-floating">
@@ -372,10 +372,11 @@
                         <label for="password" class="control-label"><span class="text-name">Password</span><span class="star">*</span></label>
                         <input type="password" class="form-control" id="password" name="password">
                     </div>
-                    <button type="submit" class="btn button-login btn-color"><span class="login">LOGIN</span></button>
-                    <a class="password" href="#">Forgot Password?</a>
-                    <button type="submit" class="btn btn-block">
-                        <span class="fb-check"><i class="fa fa-facebook-official fb-check" aria-hidden="true"></i></span><span class="login-via"><strong> Login </strong> with <strong>Facebook</strong></span>
+                    <button type="submit" class="btn btn-primary btn-block btn-default">LOGIN</button>
+                    <a class="password text-center" href="#">Forgot Password?</a>
+                    <button type="submit" class="btn btn-block btn-fb">
+                        <span class="fb-check"><i class="fa fa-2x fa-facebook-official fb-check" aria-hidden="true"></i></span>
+                        <span class="login-via"> Login <span class="login-with"> with </span> Facebook</span>
                     </button>
                 </form>
             </div>
@@ -518,7 +519,7 @@
   <script type="text/javascript" src="mmenu/js/jquery.mmenu.all.min.js"></script>
   <script src="bootstrap/js/bootstrap-datepicker.min.js"></script>
   <script src="js/jquery.validate.js"></script>
-  <script src="js/material.js"></script>    
+  <script src="js/material.js"></script>
   <script src="js/script.js"></script>
 </body>
 
