--- a/orderHistory.html
+++ b/orderHistory.html
@@ -333,11 +333,11 @@
                         <p class="product-name">Product Name</p>
                         <p class="product-insure">You insurance is due for renewal</p>
                       </div>
-                      <button class="btn btn-default btn-return-order pull-right">NEED ASSISTANCE</button>
+                      <button class="btn btn-default btn-small btn-return-order pull-right">NEED ASSISTANCE</button>
                     </div>
                   </div>
                 </div>
-        
+
               <div class="deliver-wrapper">
                 <h4 class="text-left deliver-head">DELIVERED</h4>
                 <div class="pending-wrapper">
@@ -357,7 +357,7 @@
                         <p class="product-name">Product Name</p>
                         <p class="product-insure">You insurance is due for renewal</p>
                       </div>
-                      <button class="btn btn-default btn-return-order">NEED ASSISTANCE</button>
+                      <button class="btn btn-default btn-small btn-return-order">NEED ASSISTANCE</button>
                     </div>
                   </div>
                 </div>
@@ -505,7 +505,7 @@
   <script type="text/javascript" src="mmenu/js/jquery.mmenu.all.min.js"></script>
   <script src="bootstrap/js/bootstrap-datepicker.min.js"></script>
   <script src="js/jquery.validate.js"></script>
-  <script src="js/material.js"></script>    
+  <script src="js/material.js"></script>
   <script src="js/script.js"></script>
 </body>
 
